# Workshop_02_Qualidade_Projeto

./: README.md  mkdocs.yml  pyproject.toml
app/: funcao.py
docs/: index.md
tests/: test_primario.py
