[tool.poetry]
name = "work-02"
version = "0.1.0"
description = ""
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.16"
mkdocstrings = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
