[tool.poetry]
name = "work-02"
version = "0.1.0"
description = ""
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.16"
mkdocstrings = "^0.24.1"
taskipy = "^1.12.2"
isort = "^5.13.2"
black = "^24.3.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"